tests/tooling/fixtures/native/execution/positive/message_send_nonzero_mutable_global_identifier_non_fast_path.objc3
module MessageSendNonzeroMutableGlobalIdentifierNonFastPathExecution;

let receiver = 7;

fn read() -> i32 {
  return 0;
}

fn main() -> i32 {
  receiver = read();
  return [receiver ping];
}
