tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_in_param_name_trailing_extern.objc3
module MisplacedQualifierInParamNameTrailingExtern;

fn add(lhs: i32, extern: i32) -> i32;

fn main() -> i32 {
  return 0;
}
